Add password field with visibility toggle
Added password input field and toggle functionality.

--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                 <input id="email" name="email" type="email" inputmode="email" required placeholder="you@example.com" />
             </div>
 
+            <div class="field">
+                <label for="password">Password</label>
+                <input id="password" name="password" type="password" required placeholder="••••••••" aria-describedby="pwHelp" />
+            </div>
+
             <div class="actions">
                 <a class="muted-link" href="#">Forgot password?</a>
                 <button class="primary" type="submit">Sign in</button>
@@ -166,4 +171,5 @@
 </script>
 </body>
 </html></svg>
+
 
