--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
         </form>
     </main>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+  // Replace these with your actual Supabase credentials
+  const supabaseUrl = 'https://your-project.supabase.co'
+  const supabaseKey = 'your-anon-key-here'
+  const supabase = supabase.createClient(supabaseUrl, supabaseKey)
+</script>
 <script>
 
     
