--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
   // Replace these with your actual Supabase credentials
-  const supabaseUrl = 'https://your-project.supabase.co'
-  const supabaseKey = 'your-anon-key-here'
+  const supabaseUrl = 'https://cezaeiotddqoxikodoks.supabase.co'
+  const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNlemFlaW90ZGRxb3hpa29kb2tzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjE4MDYwODcsImV4cCI6MjA3NzM4MjA4N30.jtqUY-cIYOYywkRzBNvtkzUFR91JBWDap_Xwq0qo3eU'
   const supabase = supabase.createClient(supabaseUrl, supabaseKey)
 </script>
 <script>
