--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         --radius:12px;
         --shadow: 0 6px 24px rgba(15,23,42,0.08);
     }
+
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
+        background-image:url("https://pin.it/5VCjOMtFC");
         margin:0;
         font-family:Inter, system-ui, sans-serif;
         background:linear-gradient(180deg,var(--bg),#eef3fb);
