--- a/index.html
+++ b/index.html
@@ -14,10 +14,31 @@
         --shadow: 0 6px 24px rgba(15,23,42,0.08);
     }
 
+
+
+
+
+#bg-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+
+
+
+
+
+
+
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-        background-image:url("https://pin.it/5VCjOMtFC");
+        
         margin:0;
         font-family:Inter, system-ui, sans-serif;
         background:linear-gradient(180deg,var(--bg),#eef3fb);
